--- a/book/index.html
+++ b/book/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Chapter 1 - HoiLenBook</title>
+        <title>HOME - HoiLenBook</title>
 
 
         <!-- Custom HTML head -->
@@ -83,7 +83,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="chapter_1.html" class="active"><strong aria-hidden="true">1.</strong> Chapter 1</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="home.html" class="active"><strong aria-hidden="true">1.</strong> HOME</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,7 +144,11 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
+                        <h1 id="hoilen-tech-blog"><a class="header" href="#hoilen-tech-blog">HoiLen Tech Blog</a></h1>
+<h2 id="このサイトの記事について"><a class="header" href="#このサイトの記事について">このサイトの記事について</a></h2>
+<ul>
+<li>このサイトの記事は，Webやプログラミングについての知識，試行錯誤や研究について再現可能な形で書き残しています．</li>
+</ul>
 
                     </main>
 
