--- a/book/404.html
+++ b/book/404.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - HoiLenBook</title>
+        <title>Page not found - NanahaBook</title>
         <base href="/">
 
 
@@ -113,7 +113,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">HoiLenBook</h1>
+                    <h1 class="menu-title">NanahaBook</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
